k8s/infra/common/longhorn-system/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: 存储
    gethomepage.dev/name: Longhorn
    gethomepage.dev/icon: longhorn.svg
    gethomepage.dev/description: ""
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - longhorn.${INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
